# embassy

embassy-net-emw3080/: Cargo.toml  README.md
embassy-net-emw3080/src/: lib.rs
examples/stm32u5/: Cargo.toml
